packages/parser/test/tokenizer/E0001.txt
/* test
multiline
===== err =====
anonymous:1:1: SyntaxError: E0001 - Unterminated comment
1 | /* test
  | ~~~~~~~
2 | multiline
